tests/NormalTests/paczka2/big_fuzzy/96839072.err
Error in line 10: l2oGP1vyRXG S318 74,5
Error in line 12: 55r3HNCjUO S468 32,3
Error in line 23: 1moNZU A264 69,4
Error in line 29: Xeun Am64 5,1
Error in line 32: 1moNZU S318 33,5
Error in line 26: S773 S773 75,6
Error in line 37: twjX6t7A8 S773 168,0
Error in line 39: ZFY A264 72,7
Error in line 24: Xeun A264 74,2
Error in line 40: 1moNZU A264 60,5
Error in line 53: twjX6t7A8 A264 40,1
Error in line 64: l2oGP1vyRXG A264 103,25
Error in line 65: ZFY S468 44,8
Error in line 62: twjX6t7A8 A264 28,3
Error in line 68: Xeun A264 84,0
Error in line 86: 55r3HNCjUO A264 42,8
Error in line 92: 55r3HNCjUO S773 29,2
Error in line 87: S773 A264 45,0
Error in line 96: S773 S773 32,6
Error in line 93: 55r3HNCjUO S468 54,3
Error in line 97: S773 A264 73,5
Error in line 103: 55r3HNCjUO A264 99,3
Error in line 109: Xeun S318 46,0
Error in line 113: ZFY S773 29,8
Error in line 117: ZFY S318 42,0
Error in line 122: 55r3HNCjUO S318 58,5
Error in line 121: S773 A264 35,3
Error in line 131: 55r3HNCjUO A264 37,4
Error in line 138: S773 A264 35,9
Error in line 148: ZFY S468 25,5
Error in line 126: Xeun A264 79,6
Error in line 161: twjX6t7A8 S773 98,03
Error in line 152: 1moNZU A264 27,5
Error in line 162: twjX6t7A8 S773 433,5
Error in line 168: twjX6t7A8 S318 44,8
Error in line 170: twjX6t7A8 S468 68,8
Error in line 180: ?A26Î
Error in line 189: ZFY S318 94,9
Error in line 181: l2oGP1vyRXG S773 98,2
Error in line 203: Xeun S773 50,8
Error in line 208: 55r3HNCjUO A264 3,4
Error in line 216: ZFY S773 133,92
Error in line 193: ZFY S773 69,4
Error in line 217: Xeun A264 13,9
Error in line 224: Xeun S468 14,0
Error in line 228: Xeun A264 70,5
Error in line 231: Xeun S468 20,7
Error in line 233: Xeun S773 -5,1
Error in line 234: lmoGP1vyRXG S318 111,m
Error in line 237: twjX6t7A8 S468 35,3
Error in line 232: Xeun S773 81,2
Error in line 229: l2oGP1vyRXG S318 55,9
